--- a/src/style.scss
+++ b/src/style.scss
@@ -3,15 +3,34 @@
     justify-items: center;
     align-items: center;
 }
+
+.inp {
+    margin-top: 5%;
+    margin-bottom: 0;
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
+    height: 200px;
+    position: relative;
+    border-radius: 6%;
+    overflow-y: scroll;
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    border: solid 3px goldenrod;
+    color: #fff;
+    font-weight: 600;
+    outline:none;
+    text-align:start;
+}
 .contain {
     width: 60%;
     height: 30%;
     border: solid 1px crimson;
+    background-color: rgba($color: #000000, $alpha: 0.3);
     align-self: center;
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 15%;
+    margin-top: 10px;
     height: 340px;
     border-radius: 6%;
     padding: 8px;
@@ -169,7 +188,7 @@
             height: 100%;
             background-color: beige;
         }
-        #space3 {
+        #Space3 {
             width: 420px;
             height: 100%;
             background-color: pink;
