--- a/src/style.css
+++ b/src/style.css
@@ -17,13 +17,13 @@
   height: 200px;
   position: relative;
   border-radius: 6%;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: rgba(0, 0, 0, 0.3);
   border: solid 3px goldenrod;
   color: #fff;
   font-weight: 600;
   outline: none;
-  text-align: start;
+  resize: none;
 }
 
 .contain {
@@ -47,7 +47,7 @@
   padding: 8px;
 }
 
-.contain .firstRow {
+.firstRow {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -57,9 +57,10 @@
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.contain .firstRow .regButt {
+.regButt {
   width: 58px;
   height: 58px;
   background-color: aqua;
@@ -75,13 +76,22 @@
   border-radius: 15%;
 }
 
-.contain .firstRow #Backspace13 {
+.regButt:hover {
+  cursor: pointer;
+}
+
+.regButt:active {
+  background-color: yellow;
+  cursor: pointer;
+}
+
+#Backspace13 {
   min-width: 100px;
   height: 58px;
   background-color: beige;
 }
 
-.contain .secRow {
+.secRow {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -93,7 +103,7 @@
   margin-bottom: 5px;
 }
 
-.contain .secRow .regButt {
+.regButt {
   width: 58px;
   height: 100%;
   background-color: aqua;
@@ -109,19 +119,19 @@
   border-radius: 15%;
 }
 
-.contain .secRow #Tab0 {
+#Tab0 {
   min-width: 70px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .secRow #Del14 {
+#Del14 {
   min-width: 70px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .thiRow {
+.thiRow {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -133,7 +143,7 @@
   margin-bottom: 5px;
 }
 
-.contain .thiRow .regButt {
+.regButt {
   width: 58px;
   height: 100%;
   background-color: aqua;
@@ -149,19 +159,19 @@
   border-radius: 15%;
 }
 
-.contain .thiRow #CapsLock0 {
+#CapsLock0 {
   min-width: 100px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .thiRow #Enter12 {
+#Enter12 {
   min-width: 100px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fourRow {
+.fourRow {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -173,7 +183,7 @@
   margin-bottom: 5px;
 }
 
-.contain .fourRow .regButt {
+.regButt {
   width: 58px;
   height: 100%;
   background-color: aqua;
@@ -189,26 +199,26 @@
   border-radius: 15%;
 }
 
-.contain .fourRow #Shift0 {
+#Shift0 {
   min-width: 100px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fourRow #Shift12 {
+#Shift12 {
   min-width: 115px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fourRow #Top11 {
+#Top11 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
   color: transparent;
 }
 
-.contain .fifRow {
+.fifRow {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -220,7 +230,7 @@
   margin-bottom: 5px;
 }
 
-.contain .fifRow .regButt {
+.regButt {
   width: 58px;
   height: 100%;
   background-color: aqua;
@@ -236,46 +246,50 @@
   border-radius: 15%;
 }
 
-.contain .fifRow #Ctrl0 {
+#Ctrl0 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fifRow #Ctrl8 {
+#Ctrl8 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fifRow #Win1 {
+#Win1 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fifRow #Alt2 {
+#Alt2 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fifRow #Space3 {
+#Space3 {
   width: 420px;
   height: 100%;
   background-color: pink;
 }
 
-.contain .fifRow #Alt4 {
+#Alt4 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
 }
 
-.contain .fifRow #left5, .contain .fifRow #bottom6, .contain .fifRow #right7 {
+#left5, #bottom6, #right7 {
   min-width: 58px;
   height: 100%;
   background-color: beige;
   color: transparent;
+}
+
+.active {
+  background-color: yellow;
 }
 /*# sourceMappingURL=style.css.map */
