--- a/src/style.scss
+++ b/src/style.scss
@@ -13,14 +13,16 @@
     height: 200px;
     position: relative;
     border-radius: 6%;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: rgba($color: #000000, $alpha: 0.3);
     border: solid 3px goldenrod;
     color: #fff;
     font-weight: 600;
     outline:none;
-    text-align:start;
+    resize: none;
+
 }
+
 .contain {
     width: 60%;
     height: 30%;
@@ -34,177 +36,204 @@
     height: 340px;
     border-radius: 6%;
     padding: 8px;
-    .firstRow {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 5px;
-
-        .regButt {
-            width: 58px;
-            height: 58px;
-            background-color: aqua;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15%;
-        }
-
-        #Backspace13 {
-            min-width: 100px;
-            height: 58px;
-            background-color: beige;
-        }
-        
-    }
-    .secRow {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: 5px;
-        .regButt {
-            width: 58px;
-            height: 100%;
-            background-color: aqua;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15%;
-        }
-
-        #Tab0 {
-            min-width: 70px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Del14 {
-            min-width: 70px;
-            height: 100%;
-            background-color: beige;
-        }
-    }
-    .thiRow {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: 5px;
-
-        .regButt {
-            width: 58px;
-            height: 100%;
-            background-color: aqua;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15%;
-        }
-
-        #CapsLock0 {
-            min-width: 100px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Enter12 {
-            min-width: 100px;
-            height: 100%;
-            background-color: beige;
-        }
-    }
-    .fourRow {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        margin-bottom: 5px;
-        .regButt {
-            width: 58px;
-            height: 100%;
-            background-color: aqua;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15%;
-        }
-
-        #Shift0 {
-            min-width: 100px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Shift12 {
-            min-width: 115px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Top11 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-            color: transparent;
-        }
-    }
-    .fifRow {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 5px;
-        .regButt {
-            width: 58px;
-            height: 100%;
-            background-color: aqua;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 15%;
-        }
-
-        #Ctrl0 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Ctrl8 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #Win1 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-        }
-        #Alt2 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-        }
-        #Space3 {
-            width: 420px;
-            height: 100%;
-            background-color: pink;
-        }
-
-        #Alt4 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-        }
-
-        #left5, #bottom6, #right7 {
-            min-width: 58px;
-            height: 100%;
-            background-color: beige;
-            color: transparent;
-        }
-    }
+   
 }
+
+.firstRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+.regButt {
+    width: 58px;
+    height: 58px;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+
+   
+}
+
+.regButt:hover {
+    cursor: pointer;
+}
+
+.regButt:active {
+    background-color: yellow;
+    cursor: pointer;
+}
+
+#Backspace13 {
+    min-width: 100px;
+    height: 58px;
+    background-color: beige;
+}
+
+.secRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+    
+}
+
+.regButt {
+    width: 58px;
+    height: 100%;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+}
+
+#Tab0 {
+    min-width: 70px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Del14 {
+    min-width: 70px;
+    height: 100%;
+    background-color: beige;
+}
+.thiRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+
+   
+}
+
+.regButt {
+    width: 58px;
+    height: 100%;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+}
+
+#CapsLock0 {
+    min-width: 100px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Enter12 {
+    min-width: 100px;
+    height: 100%;
+    background-color: beige;
+}
+.fourRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+   
+}
+
+.regButt {
+    width: 58px;
+    height: 100%;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+}
+
+#Shift0 {
+    min-width: 100px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Shift12 {
+    min-width: 115px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Top11 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+    color: transparent;
+}
+.fifRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+   
+}
+
+
+.regButt {
+    width: 58px;
+    height: 100%;
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15%;
+}
+
+#Ctrl0 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Ctrl8 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+}
+
+#Win1 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+}
+#Alt2 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+}
+#Space3 {
+    width: 420px;
+    height: 100%;
+    background-color: pink;
+}
+
+#Alt4 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+}
+
+#left5, #bottom6, #right7 {
+    min-width: 58px;
+    height: 100%;
+    background-color: beige;
+    color: transparent;
+}
+ .active {
+        background-color: yellow;
+    }
