--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,21 @@
   padding: 8px;
 }
 
+.text {
+  width: 60%;
+  height: auto;
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: crimson;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: auto;
+  margin-top: 10px;
+  padding: 8px;
+  justify-content: center;
+}
 .firstRow {
   width: 100%;
   height: 100%;
